--- a/src/main/webapp/resources/dizajn.css
+++ b/src/main/webapp/resources/dizajn.css
@@ -151,12 +151,14 @@ header button{
 	width:100%;
 	margin-top:5px;
 }
+
 #center #center_main_info {
 	width: 741px;
-	height: 189px;
+	height: 140px;
 	margin: 30px 20px;
 	border: 1px solid #000;
 }
+
 .half {
     float: left;
     height: 120px;
@@ -165,19 +167,33 @@ header button{
 }
 .first_half {
 	width: 55%;
+	margin-top: 40px;
+	height: 80px;
 }
 .second_half {
 	width: 38%;
 }
+
+#resource {
+	margin-left: 5px;
+	margin-top: 8px;
+	float: left;
+}
+
 .half_text {
 	font-size:14px;
-	padding:10px;
+	padding-top:10px;
+	padding-bottom:10px;
+	padding-right:10px;
+	padding-left:0px;
 }
 .half input, select{
-	margin: 0 10px;
+	margin: 0px 0px 10px 0px;
 }
+
 .half .short {
 	width:100px;
+	margin-bottom: 10px;
 }
 .half table{
 	border: 1px solid #ccc;
