--- a/src/main/webapp/resources/dizajn.css
+++ b/src/main/webapp/resources/dizajn.css
@@ -289,8 +289,8 @@ header button{
 
 #saveGalleryAttributes {
 	position: absolute; 
-	right:30px; 
-	top:580px;
+	right:-50px; 
+	top:560px;
 }
 
 .selected:not(.gallery) {
@@ -308,4 +308,8 @@ input::-webkit-inner-spin-button {
 	width: 40px;
 	text-align: center;
 	margin-top: 5px;
+}
+
+.ws-number {
+		text-align: center;
 }
