--- a/src/main/webapp/resources/dizajn.css
+++ b/src/main/webapp/resources/dizajn.css
@@ -5,31 +5,28 @@ body{
 	background:#fff;
 }
 #container{
-	width:1325px;
+	width:100%;
 	margin:0 auto;
-	border: 1px solid #000;
+	border: 2px solid #000;
 }
 
 /*header*/
 header{
-	width:1305px;
+	width:98%;
 	height: 20px; 
 	padding-top:10px;
-	padding-left:20px;
+	margin-left: 10px;
+	margin-right: 10px;
 	padding-bottom: 10px;
-	border: 1px solid #000;
 }
-header button{
-	margin-left:10px;
-}
+
 #header_right{
 	float:right;
-	margin-right: 50px;
 }
 
 /*glavni dio */
 #main{
-	width:1325px;
+	width: 99%;
 	border: 1px solid #000;
 	float:left;
 }
@@ -38,18 +35,20 @@ header button{
 	float:left;
 	overflow-y:scroll;
 	border-right: 1px solid #000;
-	width:270px;
+/* 	width:270px; */
+	width: 22%;
 	height:588px;
 }
 
 .pages{
 	width:234px;
 	height:128px;
-	margin: 20px auto 0;
+	margin: 2% auto 0;
 	border: 1px solid #000;
 	float: right;
 	margin-right: 10px;
 	margin-bottom: 10px;
+	clear: right;
 }
 .delete_slide{
 	float:right;
@@ -105,13 +104,13 @@ header button{
 /*sredina*/
 #center{
 	float:left;
-	width:734px; /* 766px full width */
+	width: 55%;
 	height:588px;
 }
 #center #center_main {
-	width: 741px;
+	width: 100%;
 	height: 300px;
-	margin: 30px 20px;
+	margin: 2% 2% 2% 0%;
 	border: 1px solid #000;
 }
 #center #center_main #center_main_image {
@@ -150,7 +149,6 @@ header button{
 }
 
 #center #center_main_info {
-	width: 741px;
 	height: 140px;
 	margin: 30px 20px;
 	border: 1px solid #000;
@@ -223,7 +221,8 @@ header button{
 /*desno*/
 #right{
 	float:right;
-	width:270px;
+/* 	width:270px; */
+ 	width: 22%;
 	height:588px;
 	border-left: 1px solid #000;
 }
@@ -281,13 +280,13 @@ header button{
 .left_align{
 	text-align:left;
 	margin-left:20px;
-	width:75%;
+	width:70%;
 }
 
 #saveGalleryAttributes {
-	position: absolute; 
-	right:-50px; 
-	top:560px;
+	float: right;
+	margin-right: 2%;
+	margin-top: 5%;
 }
 
 .selected:not(.gallery) {
