Preview resursa na pageovima

--- a/src/main/webapp/resources/dizajn.css
+++ b/src/main/webapp/resources/dizajn.css
@@ -2,11 +2,11 @@
 /* CSS Document */
 
 body{
-/* 	background:#fff; */
+/* 	background:#fff; 
 	background: -webkit-linear-gradient(left top, #6A81F6, #6CF4EF);
     background: -o-linear-gradient(bottom right, #6A81F6, #6CF4EF);
     background: -moz-linear-gradient(bottom right, #6A81F6, #6CF4EF);
-    background: linear-gradient(to bottom right, #6A81F6, #6CF4EF);
+    background: linear-gradient(to bottom right, #6A81F6, #6CF4EF);*/
 }
 #container{
 	width:100%;
