--- a/src/main/webapp/resources/dizajn.css
+++ b/src/main/webapp/resources/dizajn.css
@@ -45,11 +45,15 @@ header{
 /*lijevo*/
 .gallery{
 	float:left;
-	overflow-y:scroll;
+	overflow-y:hidden;
 	border-right: 1px solid #000;
 /* 	width:270px; */
 	width: 22%;
 	height:588px;
+}
+
+#galleryScroll {
+	overflow-y: auto;
 }
 
 .pages{
@@ -161,9 +165,8 @@ header{
 }
 
 #center #center_main_info {
-	height: 140px;
-	margin: 30px 20px;
-	border: 1px solid #000;
+	height: 39%;
+	margin: 3% 20px;
 }
 
 .half {
@@ -207,13 +210,18 @@ header{
 	width:95%;
 }
 .table {
-	overflow-y:scroll;
+	overflow-y:hidden;
 }
+
+#tableScroll {
+	overflow-y:auto;
+}
+
 .half table tr{
 	width:100%;
 }
 .half table .first_col{
-	width:30%;
+	width:100%;
 	padding:5px;
 	border: 1px solid #ccc;
 }
